5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1822_3183.log
== TEST (2019-06-13 10:45:17) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


x=0
y=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[0]=vet[-1]
	print(vetz)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:28) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


x=0
y=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[0]=vet[-1]
	print(vetz)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:49) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


x=0
y=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[0]=vet[-1]
print(vetz)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:44) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[0]+1=vet[-1]-1
print(vet)


	
	

-- ERROR:
File "XXXX", line 10
    vetz[0]+1=vet[-1]-1
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:38) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[0]+aux=vet[-1]-j
	aux=aux+1
	j=j+1
print(vet)


	
	

-- ERROR:
File "XXXX", line 10
    vetz[0]+aux=vet[-1]-j
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:57) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]+aux=vet[j]-j
	aux=aux+1
	j=j+1
print(vet)


	
	

-- ERROR:
File "XXXX", line 10
    vetz[aux]+aux=vet[j]-j
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:05) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j+1
print(vet)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:21) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j+1
print(vet)


	
	

-- EXECUTION TIME:
1.27073
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:21) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j+1
print(vet)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:27) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j-1
print(vet)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:36) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j-1
print(vet)


	
	

-- EXECUTION TIME:
0.984967
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:40) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=0
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j-1
print(vet)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:58) 
-- CODE:
from numpy import*

vet=array(eval(input("entre como o vetor;")))


aux=0
j=-1
vetz=zeros(size(vet),dtype=int)
for i in range(size(vet)):
	vetz[aux]=vet[j]
	aux=aux+1
	j=j-1
print(vet)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
